# docker-c-boilerplate

./: .env  .gitignore  Dockerfile  launch.sh  readme.md
code/: CMakeLists.txt  main.c
